--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -19,9 +19,9 @@ li {
 }
 
 :root {
-    --bgCol: #F1F1F0;
+    --bgCol: #E8EDF1;
     --white: #FAFAFA;
-    /* --accentCol:#ffd1e6; */
+    --accentCol:#3F87C1;
 }
 
 body{
@@ -37,8 +37,12 @@ body{
 }
 
 .FormCardBody{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin: 4rem 1rem 4rem 1rem; /* TRBL */
+}
+
+.FormCardBodyGroupTitle{
+    font-weight: bold;
+    line-height: 1.1;
 }
 
 .FormCardBodyGroup{
@@ -46,24 +50,13 @@ body{
 }
 
 .FormCardBodyGroupButton {
-    /* font-size: 1rem;
-    line-height: 1.1;
-    margin: 0.4rem 0;
-    padding: 0.8rem 0.4rem;
-    border: 2px solid #000;
-    outline: none;
-    border-radius: 0; */
-
-    /* border: 2px solid var(--bgCol);
-    border-radius: 6rem;
-    margin: 0 0.4rem;
-    padding: 1rem 1.5rem;
-    outline: none;
-    background: var(--bgCol);
     font-size: 1.1rem;
     font-weight: 400;
-    line-height: 1;
-    text-align: center; */
+    padding: 0.5rem 1.5rem;
+    outline: none;
+    background: var(--accentCol);
+    /* line-height: 1; */
+    text-align: center;
     display: flex;
     justify-content: center;
 }
