--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -72,3 +72,24 @@ body{
     box-shadow: 0 0 0 0.25rem var(--bgCol);
 }
 /* FormCard CSS Ends  */
+
+/* LeadAttribute CSS Starts  */
+.sidebar{
+    display: flex;
+    position: absolute;
+    height: 100%;
+    width: 12rem;
+    top: 0;
+    left: 0;
+    padding-top: 14px; /* Place content 60px from the top */
+    transition: 0.26s;
+    background-color: var(--white);
+    /* box-shadow: 0 0 10px 0 rgba(0,0,0,0.4); */
+}
+
+.main{
+    /* display: flex; */
+    /* position: relative; */
+    width: auto;
+}
+/* LeadAttribute CSS Ends  */
