--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -66,6 +66,11 @@ body{
     border: 1px solid #010101 !important;
     border-radius: 0px;
 }
+.form-control:focus{
+    border-color: #cccccc;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 
 .FormCardBodyGroupInput:focus,
 .FormCardBodyGroupInput:active {
@@ -88,8 +93,29 @@ body{
 }
 
 .main{
-    /* display: flex; */
-    /* position: relative; */
-    width: auto;
+    width: 100%;
+    margin-top: 5rem;
+
 }
 /* LeadAttribute CSS Ends  */
+/* Lead Structure 2 Starts */
+.table{
+    background-color: var(--white);
+    border-radius: .2rem;
+}
+
+.thead{
+}
+
+.thead tr th{
+    text-transform: capitalize;
+}
+
+tbody tr{
+    border-top-width: .4rem;
+}
+
+.helpText{
+    word-wrap: break-word;
+}
+/* Lead Structure 2 Ends */
