--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body{
 }
 
 .FormCardBodyGroup{
+  margin: auto;
   margin-bottom: 1rem;
 }
 
@@ -127,10 +128,15 @@ body{
   justify-content: center;
 }
 
-.leadFormCard{
+.leadFormAttrCard{
   margin-top: 1rem;
 }
 
+.leadFormCard{
+  display: flex;
+  flex-direction:row;
+  flex-wrap: wrap;
+}
 .table{
   background-color: var(--white);
   /* border-radius: 1.2rem; */
